@@ -1,3 +1,9 @@
+2009-03-13  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR libstdc++/39405
+	* testsuite/20_util/shared_ptr/cons/39405.cc: New.
+	* testsuite/tr1/2_general_utilities/shared_ptr/cons/39405.cc: Likewise.
+
 2009-03-12  Benjamin Kosnik  <bkoz@redhat.com>
 
 	* testsuite/30_threads/condition_variable_any/native_handle/
